edits index.html

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -8,8 +8,7 @@
  </head>
  <body>
     <h1>Welcome!</h1>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cupiditate dolorum ipsam aut quas illum inventore quis autem velit in amet ad libero, rerum quae commodi saepe, vitae sunt nulla!
-    </p>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cupiditate dolorum ipsam aut quas illum inventore quis autem velit in amet ad libero, rerum quae commodi saepe, vitae sunt nulla!</p>
+    <p>Test</p>
  </body>
  </html> 
