--- a/week-3/index.html
+++ b/week-3/index.html
@@ -8,7 +8,20 @@
  </head>
  <body>
     <h1>Welcome!</h1>
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam cupiditate dolorum ipsam aut quas illum inventore quis autem velit in amet ad libero, rerum quae commodi saepe, vitae sunt nulla!</p>
-    <p>Test</p>
+    <main>
+    <p> Lorem ipsum dolor, <em> sit amet consectetur adipisicing elit. </em> Ullam cupiditate <strong> dolorum </strong> ipsam aut quas illum inventore quis autem velit in amet ad libero, rerum quae commodi saepe, vitae sunt nulla!</p>
+   <ol>
+      <li>Live</li>
+      <li>Laugh</li>
+      <li>Love</li>
+   </ol>
+   <dl>
+      <dt>Color</dt>
+      <dd>Red</dd>
+
+      <dt>Item</dt>
+      <dd>Poppy</dd>
+   </dl>
+   </main>
  </body>
  </html> 
