--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,8 +7,9 @@
         <title>Vicky De Sousa</title>
     </head>
     <body>
+        <h1>Vicky De Sousa</h1>
         <article>
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love listening to music, drawing, and hanging out with my cat.</p>
             <p>I've been the creative type since childhood but started to consider a career in the field of design during high school when I took my first graphic design class. I quickly became infatuated with designing layouts, using different typefaces, and creating art that was practical and had purpose; it felt so rewarding to use my creativity to solve design problems and fulfill the needs of people. I'm <em>super</em> excited to keep learning and improve my abilities to bring me closer to my dream of becoming a graphic designer!</p>
             <blockquote>Great things are done by a series of small things brought together. -<cite>Vincent van Gogh</cite></blockquote>
