Creates unorganized list, navigation, and image

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,17 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Semantics Assignment</title>
+        <title>Simple HTML Website</title>
     </head>
     <body>
-        <h1>Vicky De Sousa</h1>
-        <article>
-            <h2>About Me</h2>
-            <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love listening to music, drawing, and hanging out with my cat.</p>
-            <p>I've been the creative type since childhood, but started to consider a career in the field of design during high school when I took my first graphic design class. I quickly became infatuated with designing layouts, using different typefaces, and creating art that was practical and had purpose; it felt so rewarding to use my creativity to solve design problems and fulfill the needs of people. I'm <em>super</em> excited to keep learning and improve my abilities to bring me closer to my dream of becoming a graphic designer!</p>
-            <blockquote>"Great things are done by a series of small things brought together." -<cite>Vincent van Gogh</cite></blockquote>
-        </article>
+        <header>
+            <h1>Vicky De Sousa</h1>
+        </header>
+        <main>
+            <article>
+                <h2>About Me</h2>
+                <img src="" alt="Vicky De Sousa">
+                <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love:</p>
+                <ul>
+                    <li>drawing</li>
+                    <li>listening to music</li>
+                    <li>hanging out with my cat</li>
+                </ul>
+                <p>I've been the creative type since childhood, but started to consider a career in the field of design during high school when I took my first graphic design class. I quickly became infatuated with designing layouts, using different typefaces, and creating art that was practical and had purpose; it felt so rewarding to use my creativity to solve design problems and fulfill the needs of people. I'm <em>super</em> excited to keep learning and improve my abilities to bring me closer to my dream of becoming a graphic designer!</p>
+                <blockquote>"Great things are done by a series of small things brought together." -<cite>Vincent van Gogh</cite></blockquote>
+                <a href="notes.html">Notes</a>
+            </article>
+        </main>
         <hr>
-        <footer>Copyright 2022 Vicky De Sousa</footer>
+        <footer>&copy; Copyright 2022 Vicky De Sousa</footer>
     </body>
 </html>
