Edits description list, fixes navigation

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,26 +7,32 @@
     <title>Notes</title>
 </head>
 <body>
-    <h1>Notes</h1>
+    <header>
+        <h1>Notes</h1>
+    </header>
+    <h2>HTML Tags</h2>
     <dl>
-        <dt>Heading Tag</dt>
-        <dd>Creates a section heading with h1 being the biggest and h6 being the smallest</dd>
+        <dt><strong>&lt;h1&gt;&lt;/h1&gt;</strong></dt>
+        <dd>Creates a section heading with h1 being the most important and h6 being the least important hierarchically</dd>
         
-        <dt>Paragraph Tag</dt>
+        <dt><strong>&lt;p&gt;&lt;/p&gt;</strong></dt>
         <dd>The most commonly used tag; creates a paragraph of text with spaces before and after it</dd>
 
-        <dt>Highlighting Tag</dt>
-        <dd>Highlights a string of text</dd>
+        <dt><strong>&lt;mark&gt;&lt;/mark&gt;</strong></dt>
+        <dd><mark>Highlights</mark> a string of text</dd>
 
-        <dt>Emphasis Tag</dt>
-        <dd>Italizes a string of text for emphasis</dd>
+        <dt><strong>&lt;em&gt;&lt;/em&gt;</strong></dt>
+        <dd><em>Italicizes</em> a string of text to indicate emphasis and importance</dd>
 
-        <dt>Important Tag</dt>
-        <dd>Bolds a string of text for more emphasized information</dd>
+        <dt><strong>&lt;strong&gt;&lt;/strong&gt;</strong></dt>
+        <dd><strong>Bolds</strong> a string of text for more emphasized, important information</dd>
 
-        <dt>Deleted Content Tag</dt>
-        <dd>Strikes through content that was deleted after publishing</dd>
+        <dt><strong>&lt;hr&gt;</strong></dt>
+        <dd>Creates a horizontal line to separate content; not to be confused with a decorative line</dd>
     </dl>
-    <a href="index.html">Home</a>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+    </ul>
+    
 </body>
 </html>
