Fixes image source

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -13,7 +13,7 @@
         <main>
             <article>
                 <h2>About Me</h2>
-                <img src="vicky.jpg" alt="image of Vicky De Sousa">
+                <img src="images/vicky.JPG" alt="image of Vicky De Sousa">
                 <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love:</p>
                 <ul>
                     <li>drawing</li>
