--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -30,6 +30,6 @@
             </nav>
         </main>
         <hr>
-        <footer>&copy; Copyright 2022 Vicky De Sousa</footer>
+        <footer>&copy; 2022 Vicky De Sousa</footer>
     </body>
 </html>
