--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -33,6 +33,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
     </ul>
-    
+    <hr>
+    <footer>&copy; 2022 Vicky De Sousa</footer>
 </body>
 </html>
