Links css, adds main heading class

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -5,15 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Simple HTML Website</title>
+        <link href="css/main.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>Vicky De Sousa</h1>
+            <h1 class="site-title">Vicky De Sousa</h1>
         </header>
         <main>
             <article>
                 <h2>About Me</h2>
-                <img src="images/vicky.JPG" alt="image of Vicky De Sousa">
+                <img src="images/vicky.jpg" alt="image of Vicky De Sousa">
                 <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love:</p>
                 <ul>
                     <li>drawing</li>
