--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,12 +14,12 @@
         <main>
             <article>
                 <h2>About Me</h2>
-                <img src="images/vicky.jpg" alt="image of Vicky De Sousa">
+                <img src="images/vicky.jpg" alt="image of Vicky De Sousa" id="my-image">
                 <p>Hi! My name is Vicky. I'm a student currently in my 1<sup>st</sup> year of the <abbr title="Interactive Media Design">IMD</abbr> program at Algonquin College. I'm very passionate about design and illustration; my dream is to work professionally designing brands, merchandise, and advertisements as a graphic designer. In my free time, I love:</p>
                 <ul>
-                    <li>drawing</li>
-                    <li>listening to music</li>
-                    <li>hanging out with my cat</li>
+                    <li class="hobby-list-item">drawing</li>
+                    <li class="hobby-list-item">listening to music</li>
+                    <li class="hobby-list-item">hanging out with my cat</li>
                 </ul>
                 <p>I've been the creative type since childhood, but started to consider a career in the field of design during high school when I took my first graphic design class. I quickly became infatuated with designing layouts, using different typefaces, and creating art that was practical and had purpose; it felt so rewarding to use my creativity to solve design problems and fulfill the needs of people. I'm <em>super</em> excited to keep learning and improve my abilities to bring me closer to my dream of becoming a graphic designer!</p>
                 <blockquote>"Great things are done by a series of small things brought together." -<cite>Vincent van Gogh</cite></blockquote>
