Links to main.css, adds class to main heading

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Notes</h1>
+        <h1 class="site-title">Notes</h1>
     </header>
     <h2>HTML Tags</h2>
     <dl>
@@ -27,9 +28,11 @@
         <dt><strong>&lt;strong&gt;&lt;/strong&gt;</strong></dt>
         <dd><strong>Bolds</strong> a string of text for more emphasized, important information</dd>
     </dl>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>
     <hr>
     <footer>&copy; 2022 Vicky De Sousa</footer>
 </body>
