--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -26,6 +26,7 @@
             </article>
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="notes.html">Notes</a></li>
                 </ul>
             </nav>
