--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -31,6 +31,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="notes.html">Notes</a></li>
         </ul>
     </nav>
     <hr>
