--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,6 +8,58 @@
     <link href="css/main.css" ref="stylesheet">
 </head>
 <body>
-    
+    <header>
+       <div class="container">
+            <img src="lone-starfish-wide.jpg" alt="Starfish">
+            <div class="centered">Lone Starfish</div>
+       </div>
+        <div class="wrapper">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Story</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <h2>Life of a Starfish</h2>
+    <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+    <h3>Facts About Starfish</h3>
+    <ul>
+        <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+        <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+        <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+    </ul>
+    <article>
+        <h3>Contact to learn more</h3>
+        <form action="#" method="get">
+            <div>
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name">
+            </div>
+            <div>
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div>
+                <label for="msg">Your Message</label>
+                <textarea id="msg" name="msg"></textarea>
+            </div>
+            <div>
+                <h3>Would you like to visit the starfish?</h3>
+                <label for="yes">Yes</label>
+                <input type="radio" id="often" name="options" value="yes">
+                
+                <label for="no">No</label>
+                <input type="radio" id="sometimes" name="options" value="no">
+
+                <label for="maybe">Maybe</label>
+                <input type="radio" id="never" name="options" value="maybe">
+            </div>
+    <footer>
+        &copy; Lone Starfish.
+    </footer>
 </body>
 </html>
