--- a/midterm/index.html
+++ b/midterm/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-       <div class="container">
-            <img src="lone-starfish-wide.jpg" alt="Starfish">
-            <div class="centered">Lone Starfish</div>
+       <div>
+            <img src="images/lone-starfish-wide.jpg" alt="single starfish">
+            <h1>Lone Starfish</h1>
        </div>
         <div class="wrapper">
             <nav>
