fixes link to main.css

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midterm</title>
     <link href="css/reset.css" rel="stylesheet">
-    <link href="css/main.css" ref="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <header>
