adds classes to nav, ul, form

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,36 +10,35 @@
 </head>
 <body>
     <header>
-       <div class="banner">
+       <div class="hero">
             <h1>Lone Starfish</h1>
-            <img src="images/lone-starfish-wide.jpg" alt="wide image of a single starfish" id="wide-image">
+            <img src="images/lone-starfish-wide.jpg" alt="wide image of a single starfish" class="banner">
        </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Story</a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="nav-page"><a href="#">Home</a></li>
+                <li class="nav-page"><a href="#">Story</a></li>
+                <li class="nav-page"><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <article>
             <h2>Life of a Starfish</h2>
-            <img src="images/lone-starfish.jpg" alt="close-up image of a single starfish" id="small-image">
-            <p>Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
+            <p><img src="images/lone-starfish.jpg" alt="close-up image of a single starfish" class="small-image">Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
         </article>
         <article>
             <h3>Facts About Starfish</h3>
             <ul>
-                <li>Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
-                <li>Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
-                <li>Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                <li class="fact">Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li class="fact">Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
+                <li class="fact">Herring barbel Mexican golden trout, killifish bonito; northern anchovy.</li>
+                <li class="fact">Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
             </ul>
         </article>
         <article>
             <h3>Contact to learn more</h3>
-            <form action="#" method="get">
+            <form action="#" method="get" class="contact">
                 <div>
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name">
@@ -53,15 +52,18 @@
                     <textarea id="msg" name="msg"></textarea>
                 </div>
                 <div>
-                    <h3>Would you like to visit the starfish?</h3>
-                    <label for="yes">Yes</label>
+                    <p>Would you like to visit the starfish?</p>
+                    <label for="yes" class="radio">Yes</label>
                     <input type="radio" id="often" name="option" value="yes">
                     
-                    <label for="no">No</label>
+                    <label for="no" class="radio">No</label>
                     <input type="radio" id="sometimes" name="option" value="no">
 
-                    <label for="maybe">Maybe</label>
+                    <label for="maybe" class="radio">Maybe</label>
                     <input type="radio" id="never" name="option" value="maybe">
+                </div>
+                <div>
+                    <input type="submit" value="Send"/ class="send">
                 </div>
             </form>
         </article>
