changes class name

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-       <div class="hero">
+       <div class="header">
             <h1>Lone Starfish</h1>
             <img src="images/lone-starfish-wide.jpg" alt="wide image of a single starfish" class="banner">
        </div>
@@ -54,16 +54,16 @@
                 <div>
                     <p>Would you like to visit the starfish?</p>
                     <label for="yes" class="radio">Yes</label>
-                    <input type="radio" id="often" name="option" value="yes">
+                    <input type="radio" id="yes" name="option" value="yes">
                     
                     <label for="no" class="radio">No</label>
-                    <input type="radio" id="sometimes" name="option" value="no">
+                    <input type="radio" id="no" name="option" value="no">
 
                     <label for="maybe" class="radio">Maybe</label>
-                    <input type="radio" id="never" name="option" value="maybe">
+                    <input type="radio" id="maybe" name="option" value="maybe">
                 </div>
                 <div>
-                    <input type="submit" value="Send"/ class="send">
+                    <input type="submit" value="Send" class="send">
                 </div>
             </form>
         </article>
