--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <header>
+        <!-- Header with banner image and site title -->
        <div class="header">
             <h1>Lone Starfish</h1>
             <img src="images/lone-starfish-wide.jpg" alt="wide image of a single starfish" class="banner">
        </div>
+       <!-- Navigation bar -->
         <nav>
             <ul>
                 <li class="nav-page"><a href="#">Home</a></li>
@@ -23,10 +25,12 @@
         </nav>
     </header>
     <main>
+        <!-- Information section with a paragraph and image -->
         <article>
             <h2>Life of a Starfish</h2>
             <p><img src="images/lone-starfish.jpg" alt="close-up image of a single starfish" class="small-image">Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf loach beachsalmon archerfish longfin fingerfish, thornfish: plownose chimaera gurnard. Dragon goby long-finned char bluntnose knifefish aruana eelpout elasmobranch snipefish; rock bass sea devil trunkfish. Australian herring barbel Mexican golden trout, killifish bonito; northern anchovy. Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra. Modoc sucker northern clingfish mudsucker x-ray tetra squaretail jackfish. Paradise fish cuchia Redhorse sucker ayu Ganges shark rockling flyingfish pearleye mahi-mahi yellow weaver: ghost pipefish ide armoured catfish halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish. Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.</p>
         </article>
+        <!-- Fact list -->
         <article>
             <h3>Facts About Starfish</h3>
             <ul>
@@ -36,6 +40,7 @@
                 <li class="fact">Waryfish, "lionfish; longfin smelt; leopard danio dragonfish," Lost River sucker, mojarra.</li>
             </ul>
         </article>
+        <!-- Contact form with three text boxes, multiple choice, and submit button -->
         <article>
             <h3>Contact to learn more</h3>
             <form action="#" method="get" class="contact">
@@ -68,6 +73,7 @@
             </form>
         </article>
     </main>
+    <!-- Footer with copyright -->
     <footer>
         <p>&copy; Lone Starfish.</p>
     </footer>
