removes class of radio

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -58,13 +58,13 @@
                 </div>
                 <div>
                     <p>Would you like to visit the starfish?</p>
-                    <label for="yes" class="radio">Yes</label>
+                    <label for="yes">Yes</label>
                     <input type="radio" id="yes" name="option" value="yes">
                     
-                    <label for="no" class="radio">No</label>
+                    <label for="no">No</label>
                     <input type="radio" id="no" name="option" value="no">
 
-                    <label for="maybe" class="radio">Maybe</label>
+                    <label for="maybe">Maybe</label>
                     <input type="radio" id="maybe" name="option" value="maybe">
                 </div>
                 <div>
