adds comments to index.html

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -18,7 +18,7 @@
     <link href="css/main.css" rel="stylesheet">
     <title>Final Project</title>
 </head>
-
+<!-- Navigation bar with a logo image, five pages, and search bar -->
 <body>
     <nav>
         <img src="images/logo.png" alt="Three Star Media logo">
@@ -34,6 +34,7 @@
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </nav>
+    <!-- Header with banner image and contact button -->
     <header>
         <img src="images/main-banner.jpg" alt="wide image of a workplace">
         <h1>Welcome to Three Star Media</h1>
@@ -42,6 +43,7 @@
             Reiciendis, et dolorem.</p>
         <button type="button">Connect with us <i class="fa fa-caret-right"></i></button>
     </header>
+    <!-- Main section containing 11 sections, including buttons, a form, map and table -->
     <main>
         <div class="about-us">
             <img src="images/about-us.jpg" alt="ping pong table">
@@ -123,6 +125,7 @@
                     quod voluptate! Quia, vel beatae!</p>
             </div>
         </div>
+        <!-- Contact form with three text boxes and submit button -->
         <div class="contact-us">
             <h2>Contact Us</h2>
             <h3>Send us a message</h3>
@@ -144,6 +147,7 @@
                 </div>
             </form>
         </div>
+        <!-- Formats Google Maps minimap -->
         <div class="location">
             <h3>Location</h3>
             <iframe
@@ -151,6 +155,7 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <!-- Table containing hours of operation -->
         <div class="hours">
             <h3>Hours of operation</h3>
             <table>
@@ -169,6 +174,7 @@
             </table>
         </div>
     </main>
+    <!-- Footer with copyright -->
     <footer>
         <p>&copy; Copyright Three Star Media, 2020</p>
         <p>All images are taken from <u>Unsplash</u></p>
