adds comments to index.html

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -29,6 +29,7 @@
             <li class="nav-item"><a href="#">Team</a></li>
             <li class="nav-item"><a href="#">Contact</a></li>
         </ul>
+        <!-- Search bar with search button -->
         <form>
             <input type="text" placeholder="Search">
             <button type="submit"><i class="fa fa-search"></i></button>
